# dha-catalogue-harvester

./: .gitignore  README.md  poetry.toml  pyproject.toml
.github/workflows/: sync.yaml
acdh/dha/harvester/: Harvester.py  VocabularyHarvester.py
tests/: test_dha_harvester.py
